Add More Socials,Add LiveStream Address, Shadow color to gray, Red color rel Word ;) : 99/03/17

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="Description" content="The Web-Products List of Mohsen Fallahnejad">
+    <meta name="description" content="The Web-Products List of Mohsen Fallahnejad">
+    <meta name="keywords" content="HTML, CSS, JavaScript, front, front-end, vue, vue.js">
+    <meta name="author" content="Mohsen Fallahnejad">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
-        <%= htmlWebpackPlugin.options.title %>
+        Dev.Mohsen Fallahnejad
     </title>
 </head>
 
